# aprsfeed-rs

./: .gitignore  Cargo.toml  aprspacket.pcap  justfile
.claude/: project_aprsfeed.md
changelog/: 2026-03-14T00-00-00_initial_implementation.md  2026-03-14T00-01-00_igmpv3_ssm_support.md  2026-03-14T00-02-00_pcap_integration_test.md  2026-03-14T000000-migrate-igate-from-ka9q-proto.md  2026-03-14T000000-refactor-ka9q-proto.md  2026-03-14T19-40-00_fix_multicast_bind_address.md
src/: aprs.rs  ax25.rs  cli.rs  igate.rs  lib.rs  main.rs  multicast.rs  pipeline.rs  rtp.rs
tests/: pcap_integration.rs
