[package]
name = "aprsfeed-rs"
version = "0.1.0"
edition = "2021"
authors = ["Peter Grace <pete.grace@gmail.com>"]
description = "APRS igate feeder: receives AX.25 frames from multicast RTP and forwards to APRS2 network"

[dependencies]
anyhow = "1.0"
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
socket2 = { version = "0.5", features = ["all"] }
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

[dev-dependencies]
pcap-file = "2"
